--- a/examples/transformers_agent_mmlmtools.ipynb
+++ b/examples/transformers_agent_mmlmtools.ipynb
@@ -12,17 +12,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from mmlmtools.adapter.transformers_agent import load_tools_for_hf_agent\n",
-    "tools = load_tools_for_hf_agent()"
+    "from mmlmtools.adapter.transformers_agent import load_tools_for_tf_agent\n",
+    "tools = load_tools_for_tf_agent()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,6 +38,42 @@
    "source": [
     "agent.run(\"Generate a picture of an angel and show me the skeleton of the angel in the image\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "agent.chat('Generate a picture of an angel')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "agent.chat('detect the face of the above image')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "agent.chat('show me the skeleton of the angel in the image')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "agent.chat('segment the image')"
+   ]
   }
  ],
  "metadata": {
@@ -47,7 +83,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.9.16"
   },
   "orig_nbformat": 4,
