--- a/examples/transformers_agent_mmlmtools.ipynb
+++ b/examples/transformers_agent_mmlmtools.ipynb
@@ -7,12 +7,12 @@
    "outputs": [],
    "source": [
     "from huggingface_hub import login\n",
-    "login('your token')"
+    "login('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')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,16 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the the current cell or a previous cell. Please review the code in the cell(s) to identify a possible cause of the failure. Click <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. View Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
+    }
+   ],
    "source": [
     "agent.run(\"Generate a picture of an angel and show me the skeleton of the angel in the image\")"
    ]
@@ -92,7 +101,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.10.9"
   },
   "orig_nbformat": 4,
   "vscode": {
