support langchain Tool

--- a/examples/transformers_agent_mmlmtools.ipynb
+++ b/examples/transformers_agent_mmlmtools.ipynb
@@ -16,8 +16,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from mmlmtools.adapter.transformers_agent import load_tools_for_tf_agent\n",
-    "tools = load_tools_for_tf_agent()"
+    "from mmlmtools.adapter.transformers_agent import load_mmtools_for_tf_agent\n",
+    "tools = load_mmtools_for_tf_agent()"
    ]
   },
   {
