--- a/examples/transformers_agent_mmlmtools.ipynb
+++ b/examples/transformers_agent_mmlmtools.ipynb
@@ -160,7 +160,7 @@
     }
    ],
    "source": [
-    "agent.chat('Please use mmlmtools to convert the text \"singe a song\" to audio')"
+    "agent.chat('Please use mmlmtools to convert the text \"singe a song\" to an audio')"
    ]
   }
  ],
