--- a/examples/transformers_agent_mmlmtools.ipynb
+++ b/examples/transformers_agent_mmlmtools.ipynb
@@ -35,8 +35,8 @@
     }
    ],
    "source": [
-    "from mmlmtools.apis.agents.transformers_agent import load_tools_for_tf_agent\n",
-    "tools = load_tools_for_tf_agent(device='cuda')"
+    "from mmlmtools.apis.agents.transformers_agent import load_tools_for_hfagent\n",
+    "tools = load_tools_for_hfagent(device='cuda')"
    ]
   },
   {
