--- a/examples/hf_agent/hf_agent_notebook.ipynb
+++ b/examples/hf_agent/hf_agent_notebook.ipynb
@@ -18,8 +18,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from agentlego.apis.agents.transformers_agent import load_tools_for_hfagent\n",
-    "tools = load_tools_for_hfagent(['ImageCaption', 'TextToSpeech'], device='cuda')"
+    "from agentlego.apis import load_tool\n",
+    "tools = [\n",
+    "    load_tool(tool_type, device='cuda').to_transformers_agent()\n",
+    "    for tool_type in ['ImageCaption', 'TextToSpeech']\n",
+    "]"
    ]
   },
   {
@@ -29,7 +32,9 @@
    "outputs": [],
    "source": [
     "from transformers import HfAgent\n",
-    "agent = HfAgent(\"https://api-inference.huggingface.co/models/bigcode/starcoder\", additional_tools=tools)"
+    "from pathlib import Path\n",
+    "chat_prompt_template = Path('hf_demo_prompts.txt').read_text()\n",
+    "agent = HfAgent(\"https://api-inference.huggingface.co/models/bigcode/starcoder\", additional_tools=tools, chat_prompt_template=chat_prompt_template)"
    ]
   },
   {
@@ -51,7 +56,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "agent.chat('Please tell me the description of `/mnt/petrelfs/mazerun/mmlab/pretrain/demo/cat-dog.png`')"
+    "from PIL import Image\n",
+    "image = Image.open(requests.get('http://download.openmmlab.com/mmtools/human.jpg', stream=True).raw)\n",
+    "agent.chat('Please tell me the description of the image', image=image)"
    ]
   },
   {
@@ -80,7 +87,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.11.3"
   },
   "vscode": {
    "interpreter": {
