Update docs according to comments

--- a/examples/hf_agent/hf_agent_notebook.ipynb
+++ b/examples/hf_agent/hf_agent_notebook.ipynb
@@ -57,7 +57,7 @@
    "outputs": [],
    "source": [
     "from PIL import Image\n",
-    "image = Image.open(requests.get('http://download.openmmlab.com/mmtools/human.jpg', stream=True).raw)\n",
+    "image = Image.open(requests.get('http://download.openmmlab.com/agentlego/human.jpg', stream=True).raw)\n",
     "agent.chat('Please tell me the description of the image', image=image)"
    ]
   },
