--- a/examples/hf_agent/hf_agent_notebook.ipynb
+++ b/examples/hf_agent/hf_agent_notebook.ipynb
@@ -21,7 +21,7 @@
     "from agentlego.apis import load_tool\n",
     "tools = [\n",
     "    load_tool(tool_type, device='cuda').to_transformers_agent()\n",
-    "    for tool_type in ['ImageCaption', 'TextToSpeech']\n",
+    "    for tool_type in ['ImageDescription', 'TextToSpeech']\n",
     "]"
    ]
   },
